test/simple/ill-typed/inspect_poly_directly.caprice
(* TEST
  include refutable;
*)


let f (type a) (x : a) : a =
  match x with
  | [] -> []
  | _ :: _ -> []
  | _ -> x
  end
